# puzzle-image

./: .gitignore  README.md  hierarchy.txt
api/: pyproject.toml  safe-image.ts
api/app/: main.py
api/app/services/: moderation.py  puzzle.py
api/payments/: checkout.ts  webhook.ts
api/puzzle_image_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infra/: docker-compose.yml
mobile-app/: App.tsx  package-lock.json  package.json  tsconfig.json
mobile-app/src/: api.ts  config.ts
mobile-app/src/components/: AuthBar.tsx  PuzzleBoard.tsx
mobile-app/src/game/: controls.ts
mobile-app/src/game/ai/: opponent.ts
mobile-app/src/services/: auth.ts  payments.ts  safeImage.ts  score.ts
